--- a/src/Index.html
+++ b/src/Index.html
@@ -12,17 +12,29 @@
 
 <body>
     <div class="wrapper">
-        <header class="header row justify-content-between">
+        <header class="header row justify-content-between sticky-top">
             <div class="logo">
                 <span class="logo__box"></span>
                 <p class="logo__text">SUPER LOGO</p>
             </div>
+            <nav class="menu-bar-false">
+            <ul class="menu d-flex">
+                <li class="menu__item menu__item_active flex-fill"><a href="#" class="menu__link menu__link_active">HOME</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">ABOUT US</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">SERVICE</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">PARTNERS</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">CUSTOMERS</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">PROJECT</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">CAREERS</a></li>
+                <li class="menu__item flex-fill"><a href="#" class="menu__link">CONTACT</a></li>
+            </ul>
+        </nav>
             <form class="search">
                 <input type="search" class="search__input"></input>
                 <input type="submit" class="search__btn" value="GO"></input>
             </form>
         </header>
-        <nav class="menu-bar">
+        <nav class="menu-bar sticky-top">
             <ul class="menu d-flex">
                 <li class="menu__item menu__item_active flex-fill"><a href="#" class="menu__link menu__link_active">HOME</a></li>
                 <li class="menu__item flex-fill"><a href="#" class="menu__link">ABOUT US</a></li>
