before line-fix

--- a/src/Index.html
+++ b/src/Index.html
@@ -207,7 +207,7 @@
             </div>
         </div>
         <div class="clients d-flex flex-column">
-            <div class="header-item">
+            <div class="header-item header-item-clients">
                 <span class="item__line cline_3"  style="margin-bottom: 12px"></span>
                 <p class="item__article">CLIENTS</p>
             </div>
