--- a/src/Index.html
+++ b/src/Index.html
@@ -81,7 +81,6 @@
                         <span class="item__line line-2"><p class="item__article">SOME WORDS OUR CEO</p></span>
                     </div>
                     <div class="item-block">
-                        
                         <div class="item-block-text">
                             <p class="item__text">
                             <img src="img/jobs.jpg" alt="Jobs" class="item__img">
@@ -94,13 +93,12 @@
                     </div>
                 </div>
             </div>       
-            <div class="content row justify-content-around">
+            <div class="content content-reverse row justify-content-around">
                 <div class="content-item d-flex">
                     <div class="header-item">
                         <span class="item__line line-2"><p class="item__article">ABOUT SUPER LOGO</p></span>
                     </div>
                     <div class="item-block">
-                        
                         <div class="item-block-text">
                             <p class="item__text">
                             <img src="img/loopoglaz.jpg" alt="loopoglaz" class="item__img">
@@ -131,11 +129,10 @@
                 </div>
             </div>
         </div>
-        <div class="content-2 row justify-content-around">
+        <div class="content-2 row justify-content-between">
             <div class="content-item content-item-2">
                 <div class="header-item">
-                    <span class="item__line cline_2"></span>
-                    <p class="item__article">ABOUT SUPER LOGO</p>
+                    <span class="item__line cline_2"><p class="item__article">ABOUT SUPER LOGO</p></span>
                 </div>
                 <div class="item-block-text-2">
                     <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -151,8 +148,7 @@
             </div>
             <div class="content-item content-item-2">
                 <div class="header-item">
-                    <span class="item__line cline_2"></span>
-                    <p class="item__article">RESENT POSTS</p>
+                    <span class="item__line cline_2"><p class="item__article">RESENT POSTS</p></span>
                 </div>
                 <div class="wraper-article">
                     <div class="mini-item">
@@ -186,8 +182,7 @@
             </div>
             <div class="content-item content-item-2">
                 <div class="header-item">
-                    <span class="item__line cline_2"></span>
-                    <p class="item__article">ABOUT SUPER LOGO</p>
+                    <span class="item__line cline_2"><p class="item__article">ABOUT SUPER LOGO</p></span>     
                 </div>
                 <div class="item-block-text-2">
                     <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -205,7 +200,6 @@
         <div class="clients">
             <div class="header-item header-item-clients d-flex">
                 <span class="item__line cline_3"  style="margin-bottom: 12px"><p class="item__article">CLIENTS</p></span>
-                <p class="item__article">CLIENTS</p>
             </div>
             <div class="clients-logo row wrap justify-content-center">
                 <img src="img/logo-html.jpg" alt="html logo" class="clients-logo__img">
