--- a/src/Index.html
+++ b/src/Index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="content-item second-item d-flex">
                     <div class="header-item">
-                        <span class="item__line line-2"><p class="item__article">SOME WORDS OUR CEO</p></span>
+                        <span class="item__line item__line-line-2"><p class="item__article">SOME WORDS OUR CEO</p></span>
                     </div>
                     <div class="item-block">
                         <div class="item-block-text">
@@ -97,7 +97,7 @@
             <div class="content content-reverse row justify-content-around">
                 <div class="content-item d-flex">
                     <div class="header-item">
-                        <span class="item__line line-2"><p class="item__article">ABOUT SUPER LOGO</p></span>
+                        <span class="item__line item__line-line-2"><p class="item__article">ABOUT SUPER LOGO</p></span>
                     </div>
                     <div class="item-block">
                         <div class="item-block-text">
@@ -133,7 +133,7 @@
         <div class="content-2 row justify-content-between">
             <div class="content-item content-item-2">
                 <div class="header-item">
-                    <span class="item__line cline_2"><p class="item__article">ABOUT SUPER LOGO</p></span>
+                    <span class="item__line item__line-line2"><p class="item__article">ABOUT SUPER LOGO</p></span>
                 </div>
                 <div class="item-block-text-2">
                     <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -149,7 +149,7 @@
             </div>
             <div class="content-item content-item-2">
                 <div class="header-item">
-                    <span class="item__line cline_2"><p class="item__article">RESENT POSTS</p></span>
+                    <span class="item__line item__line-line2"><p class="item__article">RESENT POSTS</p></span>
                 </div>
                 <div class="wraper-article">
                     <div class="mini-item">
@@ -183,7 +183,7 @@
             </div>
             <div class="content-item content-item-2">
                 <div class="header-item">
-                    <span class="item__line cline_2"><p class="item__article">ABOUT SUPER LOGO</p></span>     
+                    <span class="item__line item__line-line2"><p class="item__article">ABOUT SUPER LOGO</p></span>     
                 </div>
                 <div class="item-block-text-2">
                     <p class="item__text item__text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -200,7 +200,7 @@
         </div>
         <div class="clients">
             <div class="header-item header-item-clients d-flex">
-                <span class="item__line cline_3"  style="margin-bottom: 12px"><p class="item__article">CLIENTS</p></span>
+                <span class="item__line item__line-line3"  style="margin-bottom: 12px"><p class="item__article">CLIENTS</p></span>
             </div>
             <div class="clients-logo row wrap justify-content-center">
                 <img src="img/logo-html.jpg" alt="html logo" class="clients-logo__img">
@@ -212,7 +212,7 @@
         </div>
         <div class="media d-flex flex-column">
             <div class="header-item header-item-clients d-flex">
-                <span class="item__line cline_3" style="margin-bottom: 12px">
+                <span class="item__line item__line-line3" style="margin-bottom: 12px">
                     <p class="item__article">OUR MEDIA</p>
                 </span>
             </div>
