--- a/src/Index.html
+++ b/src/Index.html
@@ -217,7 +217,7 @@
                 </span>
             </div>
             <div class="media-files d-flex justify-content-center">
-                <div class="media-files-video row justify-content-around">
+                <div class="media-files-video row">
                     <video class="media-files-video__item" src="" poster="img/logo-html.jpg" controls="controls" width="200" height="150">
                         <source src="" type="">
                     </video>
@@ -228,7 +228,7 @@
                         <source src="" type="">
                     </video>
                 </div>
-                <div class="media-files-audio row justify-content-center">
+                <div class="media-files-audio row">
                     <audio  class="media-files-audio__item" controls="controls">
                         <source src="" type="">
                     </audio>
